@@ -4,7 +4,6 @@
 PORTNAME=	syncthing
 PORTVERSION=	0.10.23
 CATEGORIES=	net
-MASTER_SITES=	GHR
 DISTVERSIONPREFIX=	v
 
 MAINTAINER=	swills@FreeBSD.org
